Add Login form page component and styling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,82 @@
 /* TODO: Add sitewide styles */
+/*
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Italiana&family=Pirata+One&display=swap');
+
+html, body, input, textarea, button, select, a {
+  font-family: "Italiana", sans-serif;
+  font-size: 16px;
+  font-weight: bolder;
+  font-style: normal;
+}
+
+main {
+  bottom: 0;
+  display: flex;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+button {
+  border: 0;
+  background: none;
+  font-weight: 700;
+  padding: .5em 1em;
+  text-transform: uppercase;
+  transition: background-color .25s, color .25s;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: default;
+}
+
+button:hover {
+  background-color: blueviolet;
+  color: white;
+}
+
+
+label {
+    padding: 0 5px 0 5px;
+}
+
+
+
+form {
+  flex: 0 0 400px;
+}
+
+h1 {
+  font-weight: 400;
+}
+
+
+
+
+nav {
+  flex: 0 0 300px;
+  overflow-y: auto;
+}
+
+nav a {
+  color: inherit;
+  text-decoration: none;
+}
+
+select {
+  width: 100%;
+  margin-top: 10px;
+  padding-left: 4px;
+}
+
+.error-message {
+  color: red;
+  min-height: 24px;
+  min-width: 360px;
+  margin: 0 0 10px 0;
+  padding: 0 8px;
+}
+
+*/
