--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,23 +16,26 @@ html {
 
 /* main {
   bottom: 0;
+  width: 100%;
   display: flex;
-  left: 0;
+  left: auto;
   position: absolute;
-  right: 0;
+  right: auto;
   top: 0;
 } */
 
-form {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin: auto;
+#modal-content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 80%;
-  overflow: hidden;
+  background-color: rgb(67, 1, 1, 1); /* Transparent white background */
+  padding: 20px;
+  padding-bottom: 25px;
+  border-radius: 10px;
+  width: 60%;
+  border: 1px solid black;
+  box-shadow: 0px 0px  5px rgb(11, 0, 0);
 }
+
 
 
 h1 {
@@ -47,6 +50,13 @@ p {
   color: red;
 }
 
+li {
+  letter-spacing: 1px;
+}
+
+a:hover {
+  color: red;
+}
 
 input {
   /* border-bottom: 5px solid #000000; */
@@ -62,7 +72,7 @@ input {
 }
 
 input:focus {
-  box-shadow: 0px 1px 10px rgb(107, 80, 80);
+  box-shadow: 0px 0px 12px rgb(255, 255, 255);
 }
 
 
