--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,6 @@
 body {
     width: 90%;
-    padding: auto;
+    padding: 0;
 }
 
 .nav-bar {
@@ -33,7 +33,7 @@ body {
     list-style: none;
 }
 
-.nav-bar-profile-session {
+/* .nav-bar-profile-session {
     display: flex;
     position: relative;
     padding: 0;
@@ -42,9 +42,9 @@ body {
     width: 150px;
     justify-content: space-around;
     align-items: center;
-}
+} */
 
-.nav-bar-profile-button {
+/* .nav-bar-profile-button {
     display: flex;
     position: relative;
     padding: 0;
@@ -52,38 +52,37 @@ body {
     height: 100%;
     justify-content: space-around;
     align-items: center;
-}
+} */
 
 
 #profile-button {
     position: relative;
     align-items: center;
-    color: red;
+    color: rgb(201, 22, 22);
     border-radius: 5px;
     margin: 0px;
     padding: 0;
     height: 24px;
     font-size: 23px;
-
     display: flex;
     margin-left: auto;
     margin-right: 10px;
-
+    list-style: none;
     transition: transform 2s, color 1s, background-color 1s, box-shadow 2s;
 }
 
 #profile-button:hover {
     background: none;
-    box-shadow: 2px 2px 5px rgb(255, 238, 6), -2px 2px 5px rgb(227, 52, 52), 2px -2px 5px rgb(227, 52, 52), -2px -2px 5px rgb(255, 238, 6) ;
+    box-shadow: 2px 2px 5px rgb(226, 64, 64), -2px 2px 5px rgb(67, 95, 235), 2px -2px 5px rgb(67, 95, 235), -2px -2px 8px rgb(241, 39, 39) ;
 
 }
 
 
 .profile-dropdown, .profile-dropdown-hidden {
     position: absolute;
-    right: 0px;
-    top: 110%;
-    padding: 10px 0 5px;
+    right: auto;
+    top: 8%;
+    padding: 8px 0 5px;
     width: 130px;
     height: 90px;
     z-index: 2;
@@ -94,7 +93,11 @@ body {
     border: solid 0.5px black;
     border-radius: 6px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    list-style: none;
+    overflow-x: scroll;
+
 }
+
 
 .profile-dropdown-hidden {
     display: none;
@@ -106,9 +109,24 @@ body {
     justify-content: center;
     text-align: center;
     letter-spacing: 0.5px;
+    list-style: none;
+
+
 }
 
 .profile-dropdown button {
-    margin-top: 5px;
-    padding-bottom: 3px;
+    font-size: 16px ;
 }
+
+.account-menu button {
+    margin-top: 7px;
+    padding-bottom: 3px;
+    color: red;
+}
+
+.session-buttons button {
+    color: black;
+    padding: 7px;
+    margin: 0;
+    width: 90px;
+};
