--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-TODO: Add sitewide styles
+/* TODO: Add sitewide styles */
 
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Italiana&family=Pirata+One&display=swap');
 
@@ -27,13 +27,13 @@ html {
 #modal-content {
   display: flex;
   flex-direction: column;
-  background-color: rgb(67, 1, 1, 1); /* Transparent white background */
+  background-color: rgb(67, 1, 1, 0.65); /* Transparent white background */
   padding: 20px;
-  padding-bottom: 25px;
+  padding-bottom: 30px;
   border-radius: 10px;
   width: 60%;
-  border: 1px solid black;
-  box-shadow: 0px 0px  5px rgb(11, 0, 0);
+  border: 0.5px solid rgb(255, 255, 255);
+  box-shadow: 0px 0px  50px rgb(11, 0, 0);
 }
 
 
@@ -72,7 +72,7 @@ input {
 }
 
 input:focus {
-  box-shadow: 0px 0px 12px rgb(255, 255, 255);
+  box-shadow: 0px 0px 10px rgb(255, 255, 255);
 }
 
 
@@ -81,7 +81,7 @@ button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   /* text-shadow: 0px 0px  15px rgb(148, 0, 0); */
-  padding: 5px 5px 0px 5px;
+  /* padding: 5px 5px 0px 5px; */
   font-weight: 1000;
   border-radius: 3px;
   /* text-transform: uppercase; */
