--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -2,16 +2,13 @@
   display: flex;
   flex-wrap:wrap;
   width: 100%;
-  gap: 16px;
+  gap: 10px;
   justify-content: center;
 }
 
+
 .spot-card {
   width: 300px;
-
-}
-
-.spot-card {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -22,46 +19,59 @@
 
 
 
+.spot-card:hover {
+  transform: scale(1.05);
+}
+
 .sc-image {
   width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .sc-preview-details {
   padding: 16px;
   display: grid;
   grid-template:
-    "loc loc loc rating"
-    "p p p rating ";
+  "loc loc loc loc rating"
+  "p p p p p";
   gap: 8px;
+  justify-content: space-between;
+  padding: 0px 15px 0px 15px;
+
 }
 
 .sc-location-and-price {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
 }
 
-.sc-rating {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  grid-area: rating;
-
-}
 
 .sc-location {
-  font-size: 1.1em;
-  font-weight: bold;
-  grid-area: loc;
+    font-size: 1.1em;
+    font-weight: bold;
+    grid-area: loc;
 
 }
 
 .sc-price {
-  grid-area: p;
-  font-size: 1em;
-  color: #888;
+    grid-area: p;
+    width: 150px;
+    font-size: 1em;
+    color: #888;
+}
+
+.sc-rating {
+  display: flex;
+  /* right: 50px; */
+  /* overflow: hidden; */
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: right;
+  grid-area: rating;
+
 }
 
 .spot-rating {
