--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -17,8 +17,6 @@
   transition: transform 0.2s;
 }
 
-
-
 .spot-card:hover {
   transform: scale(1.05);
 }
@@ -77,4 +75,138 @@
 .spot-rating {
   font-size: 1em;
   color: #444;
+}
+
+
+/* SpotDetails page */
+
+.details-card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* height: 1000px; */
+  max-width: 1000px;
+  align-self: center;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+#details-images {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#details-upper {
+    height: 100px;
+    width: 100%;
+    /* border: 1px solid #ddd;
+    border-radius: 8px; */
+    overflow: hidden;
+    padding: 10px;
+}
+
+.details {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  /* overflow: hidden; */
+  justify-content: space-between;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#details-left {
+    display: flex;
+    flex-direction: column;
+    left: 0px;
+    width: 70%;
+    background-color: #fff;
+    overflow: hidden;
+    height: 300px;
+    padding: 5px 0 5px 10px;
+}
+
+#details-left text {
+    font-size: 14px;
+}
+
+#details-right {
+    right: 0px;
+    justify-items: center;
+    display: grid;
+    grid-template:
+    "p p r rv"
+    "b b b b";
+    width: 35%;
+    height: 130px;
+    background-color: #fff;
+    padding: 0 5px 0 5px;
+    margin-top: 10px;
+    margin-right: 10px;
+    overflow: hidden;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+#details-right-price {
+    grid-area: p;
+    border: 1px solid red;
+}
+
+#details-right-rating {
+    grid-area: r;
+    border: 1px solid red;
+}
+
+#details-right-review-number {
+    grid-area: rv;
+    border: 1px solid red;
+    margin-right: 10px;
+
+}
+
+#details-right-reserve-button {
+    grid-area: b;
+    border: 1px solid red;
+    border-radius: 0px;
+    font-size: 18px;
+    box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 1);
+    background-color: rgb(247, 85, 52);
+    color: white;
+    width: 85%;
+    height: 40px;
+    margin: 5px;
+    padding: 5px 0 5px 0;
+    justify-self: center;
+    transition: transform 0.2s;
+}
+
+#details-right-reserve-button:active {
+    box-shadow: none;
+}
+
+
+#details-left {
+    display: flex;
+    left: 0px;
+    width: 70%;
+    background-color: #fff;
+
+    overflow: hidden;
+}
+
+#details-lower-ratings-reviews {
+    margin-left: 10px;
 }
