--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -27,11 +27,22 @@ body {
 .nav-bar-home a {
     color: black;
     font-weight:500;
+
     /* letter-spacing: 1px; */
 }
 
 .nav-bar-profile-button, .nav-bar-profile-session li {
     list-style: none;
+}
+
+.create-listing a {
+    display: flex;
+    /* position:sticky; */
+    margin-right: 70px;
+    font-size: 13px;
+    font-weight:500;
+    z-index: 1;
+
 }
 
 /* .nav-bar-profile-session {
@@ -96,6 +107,7 @@ body {
     box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.4);
     list-style: none;
     overflow-x: scroll;
+    margin: 0;
 
 }
 
