--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -83,7 +83,7 @@
 .details-card {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
   /* height: 1000px; */
   max-width: 1000px;
   align-self: center;
@@ -104,7 +104,7 @@
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 #details-default-main-image {
@@ -239,4 +239,23 @@
   flex-direction: column;
   gap: 10px;
 
+}
+
+
+.details-lower-ratings-reviews-container {
+  display: flexbox;
+  width: 50%;
+  flex-direction: column;
+  /* justify-items: start; */
+}
+
+.details-lower-ratings-reviews-container .create-button {
+  justify-content: center;
+  align-content: center;
+  width: 40%;
+  min-width: 150px;
+  max-width: 250px;
+  margin-left: 10px;
+  cursor: pointer;
+  background-color: rgb(120, 120, 207);
 }
