--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -22,6 +22,7 @@ form {
 
 form input {
   /* box-shadow: 0px 0px  5px rgb(255, 255, 255); */
+  /* background-color: blue; */
   margin-bottom: 4px;
 }
 
@@ -46,10 +47,26 @@ form input {
     margin-top: 10px;
     background: none;
     font-size: 16px;
+
+    border: 0.5px solid white;
+    border-radius: 30px;
+    font-size: 18px;
+    box-shadow: 2px 2px 1px 0px rgb(255, 255, 255);
+    background-color: black;
+    color: white;
+    width: 35%;
+    height: 40px;
+    padding: 5px 0 5px 0;
+    margin-bottom: 10px;
+    justify-self: center;
+    align-content: center;
+    text-align: center;
+    cursor: pointer;
 }
 
-.enter-button:hover {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
+.enter-button:active {
+  box-shadow: none;
+  /* background-color: rgb(255, 255, 255); */
+  /* color: rgb(0, 0, 0); */
   font-weight: bolder;
 }
