--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -203,7 +203,7 @@
     background-color: rgb(247, 85, 52);
     color: white;
     width: 85%;
-    height: 30px;
+    height: 40px;
     padding: 5px 0 5px 0;
     margin-bottom: 10px;
     justify-self: center;
@@ -258,4 +258,210 @@
   margin-left: 10px;
   cursor: pointer;
   background-color: rgb(120, 120, 207);
+}
+
+
+.manage-card {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  height: 100%;
+  /* height: 1000px; */
+  max-width: 1000px;
+  align-self: center;
+  background-color: #fff;
+  /* overflow: hidden; */
+}
+
+.create-button-2 {
+  display: block;
+  font-size: 16px;
+
+  border: 1px solid black ;
+  border-radius: 0px;
+  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 1);
+  background-color: rgb(247, 85, 52);
+  color: white;
+  width: 40% ;
+  min-width: 120px;
+  max-width: 150px;
+  height: 30px;
+
+  justify-self: center;
+  align-content: center;
+  /* transition: transform 3s; */
+  text-align: center;
+  cursor: pointer;
+
+}
+
+.manage-card {
+  height: 100%;
+}
+
+.manage-spots-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+
+.create-button-2:hover {
+  background-color: rgb(247, 85, 52);
+  color: white;
+}
+
+.create-button-2:active {
+  box-shadow: none;
+}
+
+.manage-upper {
+  height: 150px;
+  width: 100%;
+  padding: 10px;
+
+}
+
+.manage-buttons-container {
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+  width: 300px;
+  justify-items: start;
+}
+
+.manage-button-update {
+  display: block;
+  font-size: 15px;
+  /* font-weight: 900; */
+  border: 1px solid black ;
+  border-radius: 0px;
+  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 1);
+  background-color: rgb(222, 222, 222);
+  color: black;
+  width: 30% ;
+  margin: 0 0 5px 5px;
+  padding: 5px;
+  padding: 0;
+  /* margin-bottom: 10px; */
+  height: 25px;
+  justify-self: center;
+  align-content: center;
+  /* transition: transform 3s; */
+  text-align: center;
+  cursor: pointer;
+}
+
+
+
+.manage-button-delete {
+  width: 30%;
+  color: black;
+  cursor:pointer;
+  margin-bottom: 7px;
+  font-size: 14px;
+  display: block;
+  height: 25px;
+  line-height: 25px;
+}
+
+
+.manage-button-delete button  {
+  display: block;
+  font-size: 15px;
+  /* font-weight: 900; */
+  border: 1px solid black ;
+  border-radius: 0px;
+  box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 1);
+  background-color: rgb(222, 222, 222);
+  color: black;
+  width: 100% ;
+  margin: 0 0 5px 5px;
+  padding: 5px;
+  padding: 0;
+  /* margin-bottom: 10px; */
+  height: 25px;
+  justify-self: center;
+  align-content: center;
+  /* transition: transform 3s; */
+  text-align: center;
+  cursor: pointer;
+
+}
+
+
+.manage-button-delete button:hover, .manage-button-update:hover {
+  background-color: rgb(222, 222, 222);
+  color: black;
+}
+.manage-button-delete button:active, .manage-button-update:active {
+  box-shadow: none;
+
+}
+
+.manage-button-update {
+  height: 23px;
+  width: 90px;
+}
+
+
+
+
+
+/* Modal */
+
+#delete-subheading {
+  color: white;
+  padding-bottom: 30px;
+  text-align: center;
+}
+
+
+.yes-no-buttons-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.yes-button {
+  width: 50%;
+  height: 30px;
+  border-radius: 0px;
+  background-color: rgb(210, 18, 18);
+  color: white;
+  box-shadow: 2px 2px 1px 0px rgb(255, 255, 255);
+  border: 0.5px solid white;
+
+}
+
+.no-button {
+  width: 50%;
+  height: 30px;
+  border-radius: 0px;
+  background-color: rgb(125, 123, 123);
+  box-shadow: 2px 2px 1px 0px rgb(255, 255, 255);
+  border: 0.5px solid white;
+  color: white;
+
+
+}
+
+
+.yes-button:active {
+
+  box-shadow: none;
+}
+
+.no-button:active {
+  box-shadow: none;
+
+}
+
+.yes-button:hover {
+  background-color: rgb(210, 18, 18);
+}
+
+.no-button:hover {
+  background-color: rgb(125, 123, 123);
 }
