--- a/frontend/src/components/ReviewFormModal/ReviewForm.css
+++ b/frontend/src/components/ReviewFormModal/ReviewForm.css
@@ -40,7 +40,8 @@
 
     border-radius: 0px;
     font-size: 18px;
-    box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 1);
+    box-shadow: 2px 2px 1px 0px rgb(255, 255, 255);
+    border: 0.5px solid black;
     background-color: white;
     color: black;
     width: 40%;
