--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -113,6 +113,7 @@ body {
 .profile-dropdown, .profile-dropdown-hidden {
     /* gap: 20px; */
     position: relative;
+    background-color: rgba(255, 255, 255, 0.8);
     right: 22px;
     top: 245%;
     padding: 5px 0 5px;
