--- a/frontend/src/components/ReviewFormModal/ReviewForm.css
+++ b/frontend/src/components/ReviewFormModal/ReviewForm.css
@@ -1,7 +1,14 @@
 
 
 .rating-container {
+    margin-top: 20px;
     height: 50px;
+}
+
+#review-input {
+    height: 100px;
+    text-align: start;
+    padding-bottom: 50px;
 }
 
 .review-button-container button {
@@ -41,12 +48,12 @@
     border-radius: 0px;
     font-size: 18px;
     box-shadow: 2px 2px 1px 0px rgb(255, 255, 255);
-    border: 0.5px solid black;
-    background-color: white;
-    color: black;
+    border: 0.1px solid rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    color: white;
     width: 40%;
     min-width: 180px;
-    height: 30px;
+    height: 33px;
     padding: 5px 0 5px 0;
     margin-bottom: 10px;
     justify-self: center;
@@ -70,6 +77,13 @@
     position: relative;
     color: white;
     transition: color 0.2s;
+}
+
+.rating-star svg {
+    height: 30px;
+    width: 30px;
+    /* gap: 20px; */
+
 }
 
 .rating-star input:checked {
