--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -37,9 +37,9 @@ body {
 
 .create-listing a {
     display: flex;
-    position: absolute;
-    right: 170px;
-    top: 31px;
+    position: relative;
+    right: 80px;
+    top: 6px;
     /* margin-right: 70px; */
     font-size: 14px;
     font-weight:500;
