--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,16 +5,17 @@ body {
 
 .nav-bar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    width: 85%;
+    width: 100%;
     /* border: 0.5px solid black; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
     /* border-radius: 20px; */
-    border-bottom: 1px solid black;
-    height: 45px;
-    margin: 5px 10px 0 10px;
-    margin-bottom: 30px;
+    /* border-bottom: 1.5px solid rgb(228, 228, 228); */
+    height: 60px;
+    margin: 20px 10px 0px 10px;
+    margin-bottom: 25px;
+    padding-bottom: 20px;
 }
 
 .nav-bar-home  {
@@ -37,17 +38,8 @@ body {
 
 .create-listing a {
     display: flex;
-    position: relative;
-    right: 80px;
-    top: 6px;
-    /* margin-right: 70px; */
     font-size: 14px;
     font-weight:500;
-    font-style: normal;
-    list-style: none;
-    margin-left: auto;
-    margin-right: auto;
-    /* z-index: 1; */
 }
 
 .create-listing a:hover {
@@ -55,7 +47,7 @@ body {
 }
 
 .nav-logo {
-    height: 37px;
+    height: 35px;
     margin-bottom: 1px;
     margin-left: 20px;
 }
@@ -86,20 +78,23 @@ body {
 
 
 #profile-button {
-    position: absolute;
-    top: 26px;
-    align-items: start;
+    height: 45px;
+    /* width: auto; */
+    padding: 10px;
+    margin-bottom: 1px;
+    margin-right: 20px;
+    border: 1px solid rgb(220, 220, 220);
+    /* position: absolute;
     color: black;
+    top: 20px;
     border-radius: 5px;
-    margin: 0px;
-    padding: 0;
+    margin-bottom: 10px ;
     height: 24px;
     font-size: 25px;
     display: flex;
     margin-left: auto;
     margin-right: 38px;
-    list-style: none;
-    /* transition: transform 2s, color 1s, background-color 1s, box-shadow 2s; */
+    list-style: none; */
 }
 
 #profile-button:hover {
@@ -107,6 +102,15 @@ body {
     color: rgb(201, 22, 22);
     /* box-shadow: 2px 2px 5px rgb(226, 64, 64), -2px 2px 5px rgb(67, 95, 235), 2px -2px 5px rgb(67, 95, 235), -2px -2px 8px rgb(241, 39, 39) ; */
     /* box-shadow: 0 0 5px red; */
+}
+
+#profile-button svg {
+    height: 25px;
+    width: auto;
+}
+#profile-button div svg {
+    height: 18px;
+    width: auto;
 }
 
 
