Styling responsiveness improvement

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,51 +5,76 @@ body {
 
 .nav-bar {
     display: flex;
-    justify-content: space-between;
+
     align-items: center;
     width: 100%;
+    /* justify-content: space-between; */
     /* border: 0.5px solid black; */
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
     /* border-radius: 20px; */
     /* border-bottom: 1.5px solid rgb(228, 228, 228); */
     height: 60px;
-    margin: 20px 10px 0px 10px;
-    margin-bottom: 25px;
+    margin: 20px 0px 25px 0px;
+    /* margin-bottom: 25px; */
     padding-bottom: 20px;
 }
 
+.nav-bar-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    /* width: 100%; */
+    /* border: 0.5px solid black; */
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+    /* border-radius: 20px; */
+    /* border-bottom: 1.5px solid rgb(228, 228, 228); */
+    height: 100%;
+    /* margin: 20px 10px 0px 10px;
+    margin-bottom: 25px;
+    padding-bottom: 20px; */
+}
+
 .nav-bar-home  {
-    font-style: normal;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    gap: 0.5em;
+    width: 100%;
     list-style: none;
-    margin-left: 20px;
-    margin-right: auto;
+
 }
 
 .nav-bar-home a {
     color: black;
     font-weight:500;
-
-    /* letter-spacing: 1px; */
 }
 
 .nav-bar-profile-button, .nav-bar-profile-session li {
     list-style: none;
 }
 
-.create-listing a {
+.create-listing {
     display: flex;
     font-size: 14px;
     font-weight:500;
+    height: 38px;
+    width: 120px;
+    align-content: center;
+    text-align: center;
 }
 
-.create-listing a:hover {
-    color: #fa441f;
+.create-listing:hover {
+    color: black;
+    background-color: rgb(244, 244, 244);
+    border-radius: 100px;
+    box-sizing: border-box;
 }
 
 .nav-logo {
     height: 35px;
     margin-bottom: 1px;
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 
 
@@ -80,9 +105,9 @@ body {
 #profile-button {
     height: 45px;
     /* width: auto; */
-    padding: 10px;
-    margin-bottom: 1px;
-    margin-right: 20px;
+    gap: 6px;
+    /* margin-bottom: 1px; */
+    /* margin-right: 20px; */
     border: 1px solid rgb(220, 220, 220);
     /* position: absolute;
     color: black;
@@ -99,17 +124,20 @@ body {
 
 #profile-button:hover {
     background: none;
-    color: rgb(201, 22, 22);
+    /* color: rgb(201, 22, 22); */
     /* box-shadow: 2px 2px 5px rgb(226, 64, 64), -2px 2px 5px rgb(67, 95, 235), 2px -2px 5px rgb(67, 95, 235), -2px -2px 8px rgb(241, 39, 39) ; */
-    /* box-shadow: 0 0 5px red; */
+    box-shadow: 0 3px 3px rgb(202, 202, 202);
+    transition: 200ms;
 }
 
 #profile-button svg {
-    height: 25px;
+    height: 29px;
     width: auto;
+    color: rgb(86, 86, 86);
+    border-radius: 100%;
 }
 #profile-button div svg {
-    height: 18px;
+    height: 16px;
     width: auto;
 }
 
