--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -55,13 +55,21 @@ body {
 }
 
 .create-listing {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-weight: 100; */
     display: flex;
-    font-size: 14px;
-    font-weight:500;
-    height: 38px;
-    width: 120px;
+    /* font-size: 14px; */
+    /* font-weight:500; */
+    height: 45px;
+    width: 125px;
     align-content: center;
     text-align: center;
+}
+.create-listing a {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    letter-spacing: -0.1px;
 }
 
 .create-listing:hover {
