--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -56,19 +56,31 @@
 }
 
 
-.sc-location {
-    font-size: 1.1em;
-    font-weight: bold;
-    /* grid-area: loc; */
+.sc-name {
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 0.95em;
+  font-weight: 500;
+  color: black;
+  /* grid-area: loc; */
 
 }
+.sc-location {
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 0.9em;
+    font-weight: 300;
+    color: #292929;
+}
 
-/* .sc-price {
+.sc-price {
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
     grid-area: p;
-    width: 150px;
-    font-size: 1em;
+    width: auto;
+    font-size: 0.9em;
+    letter-spacing: -0.5px;
+    padding-top: 8px;
     color: #8d8d8d;
-} */
+}
 
 .sc-rating {
   grid-area: rating;
@@ -76,32 +88,41 @@
   flex-direction: row;
   width: auto;
   justify-content: space-between;
-  margin-top: 5px;
+  margin-top: 2px;
 
 }
 
 .spot-rating {
   display: flex;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
   /* width: 100px; */
   font-size: 1em;
-  color: #444;
+  color: #292929;
   align-content: center;
   justify-items: center;
   /* padding-top: 1px; */
 }
 
-.spot-rating svg {
+.sc-rating svg {
   align-items: center;
   justify-items: center;
-  /* margin-top: 3px; */
-}
-
-.sc-rating p {
-  align-items: center;
-}
-
-.sc-preview-details .spot-rating {
   height: 18px;
+  width: auto;
+  /* margin-top: 2px; */
+}
+/* .spot-card:hover {
+  color: black;
+  } */
+
+  .sc-rating p {
+    align-items: center;
+    margin-top: 1px;
+    letter-spacing:-0.5px;
+  }
+
+  .sc-preview-details .spot-rating {
+    height: 18px;
   font-size: 14px;
   padding: 0px 5px;
 }
@@ -208,6 +229,7 @@
 }
 
 #details-right {
+    box-shadow: 0 4px 10px 1px rgb(220, 220, 220);
     right: 0px;
     justify-items: center;
     display: grid;
@@ -221,7 +243,6 @@
     overflow: hidden;
     border: 1px solid #ddd;
     border-radius: 9px;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
     padding: 15px 0px 10px 0px;
 }
 
@@ -233,18 +254,26 @@
 
 }
 
+#details-top-right {
+  grid-area: r;
+  display: grid;
+  grid-template:
+  "star new";
+
+}
 #details-right-price {
     grid-area: p;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     /* border: 1px solid red; */
     /* margin-left: 10px; */
     font-weight: bold;
-    align-items: center;
+    align-self: center;
+
 
 }
 
 #details-right-rating {
-    grid-area: r;
+    grid-area: star;
     display: flex;
     flex-direction: row;
     /* padding-top: 13px; */
@@ -258,11 +287,11 @@
   height: auto;
 }
 
-/* #details-right-review-number {
-    grid-area: rv;
-    padding-top: 10px;
-    margin-right: 10px;
-} */
+#details-right-review-number {
+    grid-area: new;
+    /* padding-top: 10px;
+    margin-right: 10px; */
+}
 
 #details-right-reserve-button {
     grid-area: b;
