--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -67,9 +67,10 @@ body {
 }
 .create-listing a {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 200;
+    font-weight: 300;
     font-size: 14px;
-    letter-spacing: -0.1px;
+    letter-spacing: -0.2px;
+    color: black;
 }
 
 .create-listing:hover {
@@ -151,25 +152,38 @@ body {
 
 
 .profile-dropdown, .profile-dropdown-hidden {
-    /* gap: 20px; */
-    position: relative;
-    background-color: rgba(255, 255, 255, 0.8);
-    right: 22px;
-    top: 245%;
+    position: absolute;
+    /* position: relative; */
+    top: 50px;
+    right: 5%;
+    background-color: rgb(255, 255, 255);
+    /* top: 245%; */
+    /* right: 80px; */
     padding: 5px 0 5px;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 270px;
+
     z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
-    border: solid 0.5px black;
     border-radius: 6px;
     box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4);
     list-style: none;
     overflow-x: scroll;
     margin: 0;
+
+
+    font-size: 10px;
+    border-radius: 6px;
+    padding: 8px 0 10px;
+    z-index: 12;
+    align-items: center;
+    overflow-x: scroll hidden;
+    justify-content:space-around;
+    box-sizing: border-box;
 
 }
 
