--- a/frontend/src/FooterNav/FooterNav.css
+++ b/frontend/src/FooterNav/FooterNav.css
@@ -3,8 +3,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 90px;
-    padding: 35px 37px;
+    margin-top: 120px;
     /* height: 40px; */
     box-sizing: border-box;
     background-color: rgb(245, 245, 245);
@@ -12,7 +11,10 @@
 .footerItems{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
+    max-width: 1030px;
+    padding: 35px 0px 20px 0px;
+    margin: auto;
     /* margin-top: 25px; */
     /* padding: 50px; */
     /* justify-content: space-around; */
@@ -45,7 +47,7 @@
     display: flex;
     flex-grow: 2;
     padding-top: 15px;
-    /* margin-bottom: 25px; */
+    margin-bottom: 25px;
     justify-content: center;
     width: 100%;
     gap: 10px;
