--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -35,12 +35,12 @@ body {
     padding-bottom: 20px; */
 }
 
-.nav-bar-home  {
-    display: flex;
+.nav-bar-link  {
+    display: inline-flex;
     justify-content: end;
     align-items: center;
     gap: 0.5em;
-    width: 100%;
+    max-width: 30%;
     list-style: none;
 
 }
@@ -62,6 +62,7 @@ body {
     /* font-weight:500; */
     height: 45px;
     width: 125px;
+    /* line-height: 45px; */
     align-content: center;
     text-align: center;
 }
@@ -112,6 +113,7 @@ body {
 
 
 #profile-button {
+    position: relative;
     height: 45px;
     /* width: auto; */
     gap: 6px;
@@ -132,7 +134,7 @@ body {
 }
 
 #profile-button:hover {
-    background: none;
+    /* background: none; */
     /* color: rgb(201, 22, 22); */
     /* box-shadow: 2px 2px 5px rgb(226, 64, 64), -2px 2px 5px rgb(67, 95, 235), 2px -2px 5px rgb(67, 95, 235), -2px -2px 8px rgb(241, 39, 39) ; */
     box-shadow: 0 3px 3px rgb(202, 202, 202);
@@ -152,52 +154,49 @@ body {
 
 
 .profile-dropdown, .profile-dropdown-hidden {
-    position: absolute;
-    /* position: relative; */
-    top: 50px;
+    /* position: absolute; */
+    position: relative;
+    top: 150px;
     right: 5%;
     background-color: rgb(255, 255, 255);
-    /* top: 245%; */
-    /* right: 80px; */
     padding: 5px 0 5px;
     width: 200px;
-    height: 270px;
-
-    z-index: 1;
+    height: 250px;
+    z-index: 10;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content:center;
+    justify-content:space-around;
+    align-items: start;
+    text-align: left;
     border-radius: 6px;
-    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.4);
-    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     list-style: none;
-    overflow-x: scroll;
+    overflow-x: scroll hidden;
     margin: 0;
-
-
     font-size: 10px;
     border-radius: 6px;
-    padding: 8px 0 10px;
-    z-index: 12;
-    align-items: center;
-    overflow-x: scroll hidden;
-    justify-content:space-around;
     box-sizing: border-box;
 
-}
 
+}
 
 .profile-dropdown-hidden {
     display: none;
 }
 
+.profile-dropdown > * {
+    text-align: start;
+    padding-bottom: 10px;
+    /* padding-left: 20px; */
+    width: 100%;
+
+}
 
 
 .profile-dropdown button {
     font-size: 15px ;
     font-weight:bolder;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     background-color: #F75534;
     width: 75px;
     height: 30px;
@@ -212,27 +211,30 @@ body {
 }
 
 .manage-container {
-
-    margin-bottom: 5px;
-    margin-top: 5px;
+    /* margin-bottom: 5px;
+    margin-top: 5px; */
+    margin: 0;
+    width: 100%;
 
 
 }
 
 .manage-button {
-    border-top: 0.2px solid grey;
-    border-bottom: 0.2px solid grey;
+    /* border-top: 0.2px solid grey; */
+    /* border-bottom: 0.2px solid grey; */
     color: black;
     cursor:pointer;
     margin-bottom: 7px;
     font-size: 14px;
     display: block;
-    height: 25px;
-    line-height: 25px;
+    height: 35px;
+    line-height: 35px;
+    width: 100%;
 }
 
 .manage-button:hover {
-    color: #fa441f
+    color: #fa441f;
+    background-color: rgb(241, 241, 241);
 }
 
 
