--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -24,6 +24,8 @@ form input {
   /* box-shadow: 0px 0px  5px rgb(255, 255, 255); */
   /* background-color: blue; */
   margin-bottom: 4px;
+  margin: 4px auto 4px auto;
+  /* margin: auto; */
 }
 
 .form-parent-container {
@@ -50,13 +52,15 @@ form input {
 
     border: 0.5px solid white;
     border-radius: 30px;
-    font-size: 18px;
+    font-size: auto;
     box-shadow: 2px 2px 1px 0px rgb(255, 255, 255);
     background-color: black;
     color: white;
     width: 35%;
     height: 40px;
     padding: 5px 0 5px 0;
+    min-width: 100px;
+
     margin-bottom: 10px;
     justify-self: center;
     align-content: center;
