--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -154,55 +154,26 @@ body {
 
 
 .profile-dropdown, .profile-dropdown-hidden {
-    /* position: absolute; */
-    position: relative;
-    top: 150px;
-    right: 5%;
-    background-color: rgb(255, 255, 255);
-    padding: 5px 0 5px;
     width: 200px;
-    height: 250px;
-    z-index: 10;
+    height: 220px;
+    z-index: 15;
     display: flex;
     flex-direction: column;
-    justify-content:space-around;
-    align-items: start;
-    text-align: left;
     border-radius: 6px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-    list-style: none;
     overflow-x: scroll hidden;
-    margin: 0;
+    overflow-y: auto;
     font-size: 10px;
-    border-radius: 6px;
     box-sizing: border-box;
-
-
 }
 
 .profile-dropdown-hidden {
     display: none;
 }
 
-.profile-dropdown > * {
-    text-align: start;
-    padding-bottom: 10px;
-    /* padding-left: 20px; */
-    width: 100%;
-
-}
-
 
 .profile-dropdown button {
-    font-size: 15px ;
-    font-weight:bolder;
-    /* border-radius: 20px; */
-    background-color: #F75534;
-    width: 75px;
-    height: 30px;
-    box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 1);
-    padding-top: 3px;
-
+    color: black;
 }
 
 
@@ -210,22 +181,16 @@ body {
     box-shadow: none;
 }
 
-.manage-container {
-    /* margin-bottom: 5px;
-    margin-top: 5px; */
-    margin: 0;
-    width: 100%;
-
-
+.user-details {
+    font-size: 12.5px;
 }
-
+.account-menu * {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 200;
+    letter-spacing: 0.5px;
+    /* font-size: 13px; */
+}
 .manage-button {
-    /* border-top: 0.2px solid grey; */
-    /* border-bottom: 0.2px solid grey; */
-    color: black;
-    cursor:pointer;
-    margin-bottom: 7px;
-    font-size: 14px;
     display: block;
     height: 35px;
     line-height: 35px;
@@ -233,25 +198,44 @@ body {
 }
 
 .manage-button:hover {
-    color: #fa441f;
     background-color: rgb(241, 241, 241);
 }
 
+.session-menu {
+    height: 100%;
+    /* padding: 10px 0 10px 0; */
 
-.account-menu button {
-    margin-top: 7px;
-    padding-bottom: 3px;
-    color: white;
 }
-
 .session-menu li{
+    font-family:system-ui, -appl    e-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    /* line-height: 16px; */
+    height: auto;
+    font-weight: 300;
+    letter-spacing: 0.5px;
+    text-align: center;
+    text-justify: center;
+    height: 40px;
+    line-height: 40px;
     color: black;
     margin: 0;
-    font-size: 16px;
     cursor: pointer;
-    padding-bottom: 12px;
+    /* padding-bottom: 12px; */
 }
 
-/* .session-menu li:hover {
+.session-menu li:hover {
+    /* font-weight: 400; */
     color: red;
-} */
+
+}
+
+#profile-button-no-session {
+    position: relative;
+    height: 45px;
+    /* width: auto; */
+    gap: 6px;
+    /* margin-bottom: 1px; */
+    /* margin-right: 20px; */
+    border: 1px solid rgb(220, 220, 220);
+    cursor:default;
+}
