--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -62,16 +62,21 @@
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  z-index: 3;
 }
 
 .spot-card:hover {
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
+  border: 1px solid rgba(59, 130, 246, 0.5);
+  /* color: rgba */
 }
 
 .sc-image {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  z-index: 3;
+
 }
 
 .sc-preview-details {
